RESOLVED FIXED 223317
webgl/1.0.x/conformance/glsl/misc/fragcolor-fragdata-invariant.html fails
https://bugs.webkit.org/show_bug.cgi?id=223317
Summary webgl/1.0.x/conformance/glsl/misc/fragcolor-fragdata-invariant.html fails
Kimmo Kinnunen
Reported 2021-03-16 23:35:08 PDT
webgl/1.0.4/conformance/glsl/misc/fragcolor-fragdata-invariant.html fails
Attachments
Patch (38.77 KB, patch)
2021-08-26 12:15 PDT, Kimmo Kinnunen
no flags
Patch (33.95 KB, patch)
2021-08-26 12:24 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-03-17 01:21:48 PDT
https://www.khronos.org/registry/webgl/sdk/tests/conformance/glsl/misc/fragcolor-fragdata-invariant.html?webglVersion=1&quiet=0&quick=1 Declaring both gl_FragColor and gl_FragData invariant should succeed. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". test: Declaring both gl_FragColor and gl_FragData invariant should succeed. default vertex shader default vertex shader translated for driver test fragment shader FAIL [unexpected fragment shader compile status] (expected: true) Declaring both gl_FragColor and gl_FragData invariant should succeed. test fragment shader info log PASS successfullyParsed is true TEST COMPLETE
Kimmo Kinnunen
Comment 2 2021-03-17 01:38:05 PDT
*** Bug 223334 has been marked as a duplicate of this bug. ***
Kimmo Kinnunen
Comment 3 2021-03-17 01:45:42 PDT
At least macOS 11.3, iMacPro1,1, Radeon Pro Vega 56
Radar WebKit Bug Importer
Comment 4 2021-03-23 23:36:29 PDT
Kimmo Kinnunen
Comment 5 2021-08-26 12:15:59 PDT
Kimmo Kinnunen
Comment 6 2021-08-26 12:24:55 PDT
EWS Watchlist
Comment 7 2021-08-26 12:26:14 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kenneth Russell
Comment 8 2021-08-26 22:37:28 PDT
Comment on attachment 436546 [details] Patch Great work Kimmo diagnosing and fixing this. It sounds like you've carefully analyzed what was going wrong here, so looks good to me. It would be good if Kyle could look at this too before landing. (As an aside, I wish we'd finished the upstreaming process so that large changes like this didn't make WebKit's and ANGLE's code diverge further.) r+
Kimmo Kinnunen
Comment 9 2021-08-31 00:51:05 PDT
Discussing with Kyle, he thinks this is ok. To the best of my knowledge, all the expected conformance tests still pass.
EWS
Comment 10 2021-08-31 01:11:39 PDT
Committed r281794 (241131@main): <https://commits.webkit.org/241131@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436546 [details].
Note You need to log in before you can comment on or make changes to this bug.