Source/ThirdParty/ANGLE/src/compiler/translator/TranslatorMetalDirect/DiscoverDependentFunctions.cpp
@@ -43,8 +43,10 @@ class Discoverer : public DiscoverEnclosingFunctionTraverser
             return;
         }
         const TFunction *owner = discoverEnclosingFunction(symbolNode);
-        ASSERT(owner);
-        mDepFunctions.insert(owner);
+        if (owner)
+        {
+            mDepFunctions.insert(owner);
+        }
     }
 
     bool visitAggregate(Visit visit, TIntermAggregate *aggregateNode) override
